[test-studio] Break words to prevent horizontal scroll on narrow screens

--- a/packages/test-studio/src/previews/developer/DeveloperPreview.module.css
+++ b/packages/test-studio/src/previews/developer/DeveloperPreview.module.css
@@ -4,6 +4,7 @@
   padding: 1em;
   min-height: 100%;
   box-sizing: border-box;
+  word-break: break-word;
 
   @nest & > div > pre {
     margin: 0;
